--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^12.23.22",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "nodemailer": "^7.0.9",
     "postcss": "^8.5.6",
